# ghcs

./: README.md  classifier.txt  pyproject.toml  requirements.txt  setup.py
ghcs/: cli.py  cli2.py  downloader.py
ghs/: cli.py  downloader.py  search.py
